--- a/vue-template/src/index.html
+++ b/vue-template/src/index.html
@@ -13,6 +13,7 @@
     <script src="node_modules/injector-ioc/dest/injector.js"></script>
     <script src="node_modules/dom-resource-loader/dest/resource-loader.js"></script>
     <script src="node_modules/webapp-core/build/js/webapp-core.js"></script>
+    <script src="core/base/application-extend.js"></script>
     <script>
         if(!window.Promise){
             window.Promise = HERE.$Promise;
