--- a/vue-template/src/index.html
+++ b/vue-template/src/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="index.css"/>
     <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/lz-string/libs/lz-string.js"></script>
     <script src="node_modules/vue/dist/vue.js"></script>
     <script src="node_modules/promise-deferred-sim/dest/promise.js"></script>
     <script src="node_modules/vue-router/dist/vue-router.js"></script>
